--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esmalte à La Carte</title>
     <link rel="stylesheet" href="css/styles.css">
-</head>
+    <style>
+        /* CSS para o gradiente animado */
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(45deg, #f8b4b4, #f48c8c, #f06292, #c2185b);
+            background-size: 400% 400%;
+            animation: gradientAnimation 10s ease infinite;
+            color: var(--text-color);
+        }
 
-<!-- https://br.freepik.com/search?format=search&last_filter=query&last_value=cores&query=cores&type=video -->
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 0%; }
+            50% { background-position: 100% 100%; }
+            100% { background-position: 0% 0%; }
+        }
+    </style>
+</head>
 
 <body>
     <header>
