--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <!-- Vídeo de fundo -->
     <video class="background-video" autoplay muted loop>
-        <source src="video-background.mp4" type="video/mp4">
+        <source src="css/capa.mp4" type="video/mp4">
         Seu navegador não suporta a tag de vídeo.
     </video>
 
