--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <section class="gallery">
             <h2>Galeria de Esmaltes</h2>
             <div class="gallery-images">
-                <img src="image1.jpg" alt="Esmalte 1">
-                <img src="image2.jpg" alt="Esmalte 2">
+                <img src="img/1.jpg" alt="Esmalte 1">
+                <img src="img/2.jpg" alt="Esmalte 2">
                 <img src="image3.jpg" alt="Esmalte 3">
                 <img src="image4.jpg" alt="Esmalte 4">
                 <img src="image5.jpg" alt="Esmalte 5">
