--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <div class="gallery-images">
                 <img src="img/1.jpg" alt="Esmalte 1">
                 <img src="img/2.jpg" alt="Esmalte 2">
-                <img src="image3.jpg" alt="Esmalte 3">
-                <img src="image4.jpg" alt="Esmalte 4">
-                <img src="image5.jpg" alt="Esmalte 5">
-                <img src="image6.jpg" alt="Esmalte 6">
+                <img src="img/3.jpg" alt="Esmalte 3">
+                <img src="img/4.jpg" alt="Esmalte 4">
+                <img src="img/5.jpg" alt="Esmalte 5">
+                <img src="img/6.jpg" alt="Esmalte 6">
             </div>
         </section>
 
@@ -82,7 +82,6 @@
                     <h3>Produto 2</h3>
                     <p>Descrição do produto 2. Inclui detalhes sobre cores, durabilidade e características especiais.</p>
                 </div>
-                <!-- Adicione mais itens conforme necessário -->
             </div>
         </section>
 
