--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <img src="img/4.png" alt="Esmalte 4">
                 <img src="img/5.png" alt="Esmalte 5">
                 <img src="img/6.png" alt="Esmalte 6">
+                <img src="img/6.png" alt="Esmalte 6">
             </div>
         </section>
 
