--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Whats</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Telefone</a></li>
-                <li><a href="#">Nossa Página</a></li>
+                <li><a href="#whats">Whats</a></li>
+                <li><a href="#sobre-nos">Sobre Nós</a></li>
+                <li><a href="#telefone">Telefone</a></li>
+                <li><a href="#nossa-pagina">Nossa Página</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
+        <section id="whats" class="hero">
             <h2>Bem-vindo à Esmalte à La Carte</h2>
             <p>Descubra a beleza e o glamour dos nossos esmaltes exclusivos. Mergulhe em um mundo de cores e estilos personalizados para você.</p>
         </section>
 
-        <section class="gallery">
+        <section id="sobre-nos" class="gallery">
             <h2>Galeria de Esmaltes</h2>
             <div class="gallery-images">
                 <img src="img/1.jpg" alt="Esmalte 1">
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section class="products">
+        <section id="telefone" class="products">
             <h2>Nossos Produtos</h2>
             <div class="product-list">
                 <div class="product-item">
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section class="services">
+        <section id="nossa-pagina" class="services">
             <h2>Serviços</h2>
             <div class="service-list">
                 <div class="service-item">
