--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <h2>Nossos Produtos</h2>
             <div class="product-list">
                 <div class="product-item">
-                    <img src="product1.jpg" alt="Produto 1">
-                    <h3>Produto 1</h3>
+                    <img src="img/produto1.jpg" alt="Produto 1">
+                    <h3>MAQUINA DE FAZER UNHAS AUTOMATICA</h3>
                     <p>Descrição do produto 1. Inclui detalhes sobre cores, durabilidade e características especiais.</p>
                 </div>
                 <div class="product-item">
@@ -79,12 +79,12 @@
             <h2>O que nossos clientes dizem</h2>
             <div class="testimonial-list">
                 <div class="testimonial-item">
-                    <p>"Ótima experiência! Os esmaltes são maravilhosos e duram muito tempo."</p>
-                    <cite>- Cliente 1</cite>
+                    <p>"Ótima experiência! Os esmaltes são maravilhosos e duram muito tempo, assim diz minha esposa."</p>
+                    <cite>- Alexey B.</cite>
                 </div>
                 <div class="testimonial-item">
                     <p>"Adorei o atendimento e a variedade de cores. Recomendo muito!"</p>
-                    <cite>- Cliente 2</cite>
+                    <cite>- Bruna</cite>
                 </div>
             </div>
         </section>
