--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
                 <div class="product-item">
                     <img src="img/produto1.jpg" alt="Produto 1">
                     <h3>MAQUINA DE FAZER UNHAS AUTOMATICA</h3>
-                    <p>Descrição do produto 1. Inclui detalhes sobre cores, durabilidade e características especiais.</p>
+                    <p>Descubra a nova revolução no cuidado com as unhas! Com a Máquina de Fazer Unhas Automática, você pode obter unhas perfeitas em minutos, sem sair de casa. Compacta e fácil de usar, essa máquina é ideal para quem busca praticidade e resultados profissionais com o mínimo de esforço. Escolha entre diversos designs e cores, e veja suas unhas ganharem vida com precisão e rapidez. Seja para um visual simples ou um acabamento sofisticado, nossa máquina oferece uma experiência personalizada e sem complicações.
+
+                        Principais características:
+                        
+                        Design moderno e compacto
+                        Pintura de unhas com precisão automática
+                        Diversos estilos e cores disponíveis
+                        Fácil de usar e limpar
+                        Ideal para uso pessoal ou profissional
+                        Garanta unhas impecáveis, com qualidade de salão, sem sair de casa!</p>
                 </div>
                 <div class="product-item">
                     <img src="product2.jpg" alt="Produto 2">
