--- a/index.html
+++ b/index.html
@@ -50,18 +50,23 @@
             <div class="product-list">
                 <div class="product-item">
                     <img src="img/produto1.jpg" alt="Produto 1">
-                    <h3>MAQUINA DE FAZER UNHAS AUTOMATICA</h3>
-                    <p>Descubra a nova revolução no cuidado com as unhas! Com a Máquina de Fazer Unhas Automática, você pode obter unhas perfeitas em minutos, sem sair de casa. Compacta e fácil de usar, essa máquina é ideal para quem busca praticidade e resultados profissionais com o mínimo de esforço. Escolha entre diversos designs e cores, e veja suas unhas ganharem vida com precisão e rapidez. Seja para um visual simples ou um acabamento sofisticado, nossa máquina oferece uma experiência personalizada e sem complicações.
-
-                        Principais características:
-                        
-                        Design moderno e compacto
-                        Pintura de unhas com precisão automática
-                        Diversos estilos e cores disponíveis
-                        Fácil de usar e limpar
-                        Ideal para uso pessoal ou profissional
-                        Garanta unhas impecáveis, com qualidade de salão, sem sair de casa!</p>
-                </div>
+                    <h3>Máquina de Fazer Unhas Automática</h3>
+                    <p>
+                        Descubra a nova revolução no cuidado com as unhas! Com a <strong>Máquina de Fazer Unhas Automática</strong>, você pode obter unhas perfeitas em minutos, sem sair de casa. Compacta e fácil de usar, essa máquina é ideal para quem busca praticidade e resultados profissionais com o mínimo de esforço. Escolha entre diversos designs e cores, e veja suas unhas ganharem vida com precisão e rapidez. Seja para um visual simples ou um acabamento sofisticado, nossa máquina oferece uma experiência personalizada e sem complicações.
+                    </p>
+                    <h4>Principais características:</h4>
+                    <ul>
+                        <li>Design moderno e compacto</li>
+                        <li>Pintura de unhas com precisão automática</li>
+                        <li>Diversos estilos e cores disponíveis</li>
+                        <li>Fácil de usar e limpar</li>
+                        <li>Ideal para uso pessoal ou profissional</li>
+                    </ul>
+                    <p>
+                        Garanta unhas impecáveis, com qualidade de salão, sem sair de casa!
+                    </p>
+                    
+                </div> 
                 <div class="product-item">
                     <img src="product2.jpg" alt="Produto 2">
                     <h3>Produto 2</h3>
