--- a/index.html
+++ b/index.html
@@ -68,9 +68,24 @@
                     
                 </div> 
                 <div class="product-item">
-                    <img src="product2.jpg" alt="Produto 2">
+                    <img src="img/produto2.jpg" alt="Produto 2">
                     <h3>Produto 2</h3>
-                    <p>Descrição do produto 2. Inclui detalhes sobre cores, durabilidade e características especiais.</p>
+                    <h3>Serviço de Francesinhas para Unhas</h3>
+                    <p>
+                        Tenha unhas elegantes e delicadas com nosso <strong>Serviço de Francesinhas</strong>. As francesinhas são clássicas e nunca saem de moda, proporcionando um visual sofisticado e versátil para qualquer ocasião. Nossos profissionais utilizam produtos de alta qualidade e técnicas precisas para garantir um acabamento perfeito que destaca suas unhas com um toque de suavidade e classe.
+                    </p>
+                    <h4>Principais benefícios:</h4>
+                    <ul>
+                        <li>Acabamento clássico e sofisticado</li>
+                        <li>Durabilidade prolongada com produtos de alta qualidade</li>
+                        <li>Opção de personalização com diferentes espessuras e cores</li>
+                        <li>Serviço rápido e eficiente</li>
+                        <li>Ideal para eventos formais e uso diário</li>
+                    </ul>
+                    <p>
+                        Transforme suas unhas com a elegância atemporal das francesinhas, feitas sob medida para você!
+                    </p>
+                    
                 </div>
             </div>
         </section>
