--- a/index.html
+++ b/index.html
@@ -94,8 +94,22 @@
             <h2>Serviços</h2>
             <div class="service-list">
                 <div class="service-item">
-                    <h3>Serviço 1</h3>
-                    <p>Descrição do serviço 1. Inclui detalhes sobre o que é oferecido e benefícios para o cliente.</p>
+                    <h3>Serviço de Remoção de Cutículas</h3>
+<p>
+    Mantenha suas unhas saudáveis e com aparência impecável com nosso <strong>Serviço de Remoção de Cutículas</strong>. A remoção adequada das cutículas é essencial para unhas bem cuidadas e fortes. Nossos especialistas utilizam técnicas seguras e produtos de alta qualidade para garantir que suas cutículas sejam removidas com precisão, sem causar danos ou desconforto.
+</p>
+<h4>Principais benefícios:</h4>
+<ul>
+    <li>Cutículas removidas de forma segura e eficaz</li>
+    <li>Realce da beleza natural das unhas</li>
+    <li>Prevenção de inflamações e fortalecimento das unhas</li>
+    <li>Produtos hipoalergênicos e de alta qualidade</li>
+    <li>Ideal para manter unhas saudáveis e bem cuidadas</li>
+</ul>
+<p>
+    Dê às suas unhas o cuidado que elas merecem com nosso serviço especializado em remoção de cutículas!
+</p>
+
                 </div>
                 <div class="service-item">
                     <h3>Serviço 2</h3>
