--- a/index.html
+++ b/index.html
@@ -112,8 +112,18 @@
 
                 </div>
                 <div class="service-item">
-                    <h3>Serviço 2</h3>
-                    <p>Descrição do serviço 2. Inclui detalhes sobre o que é oferecido e benefícios para o cliente.</p>
+                    <h3>Serviço de Lixar as Unhas</h3>
+<p>
+    Alcance o formato perfeito para suas unhas com nosso <strong>Serviço de Lixar as Unhas</strong>. Quer você prefira unhas quadradas, arredondadas ou no estilo amendoado, nossos profissionais cuidam de cada detalhe, garantindo um acabamento suave e simétrico. Lixar as unhas corretamente ajuda a evitar quebras e mantém suas unhas com um visual impecável e bem cuidado.
+</p>
+<h4>Principais benefícios:</h4>
+<ul>
+    <li>Modelagem precisa e personalizada</li>
+    <li>Acabamento suave e sem arestas</li>
+    <li>Prevenção de quebras e lascas</li>
+    <li>Serviço rápido e adaptado ao seu estilo</li>
+    <
+
                 </div>
             </div>
         </section>
